--- a/src/Resposive.css
+++ b/src/Resposive.css
@@ -1,7 +1,7 @@
 :root {
   --color-main: #021e43;
   --color-3b4149: #3b4149;
-  --color-febd69: #b8cee3;
+  --color-hover: #b8cee3;
   --color-secundary: #00377a;
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
@@ -10,89 +10,45 @@
   --color-1c1c1b: #1c1c1b;
 }
 
-
 /* Tablets en horizonal y escritorios normales */
-@media (max-width: 1252px) {
+@media (max-width: 1399px) {
   
   /* Header part.................................. */
 
-  .button-toggle{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    border: 2px solid rgba(255, 255, 255, 0.4);
-    border-radius: 10px;
-    color: white;
-    margin-left: 6%;
-    background: transparent;
-  }
-
-  header{
-    padding: 10%;
-
-  }
-
-  
- .input-div{
-  width: 60% !important;
-  margin-left: 8%;
+ .nav-links{
+  width: 100% !important;
+  height: 80px;
+  margin: 5px;
+  border-radius: 10px;
+  padding: 10px !important;
  }
 
-  .flex-end{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+ .nav-links:focus{
+  background-color: rgba(255, 255, 255, 0.76) !important;
+ }
 
-  .header-upper-links{
-    display: none; 
-  }
+ .InputGroup{
+  margin: auto;
+  padding: 10px;
+}
 
-  .header-upper-links.isActive{
-    display: flex ; 
-  }
-  
-  .header-upper-links-container{
-    display: block;
-  }
+.logo-toggle{
+  margin-left: 110px;
+}
+/* 
 
-  .header-upper-links-container div{
-    display: inline;
-  }
-
-  .mala-practica{
-    margin-left: 20px ;
-  }
-
-  .mala-practica:hover{
-    margin-left: 10px;
-  }
-
-  .header-upper-links-container .links-div:hover{
-    background-color: var(--color-secundary);
-    padding: 40px 300px;
-    border-radius: 10px;
-    width: 100%;
-    height: 50px;
-    cursor: pointer;
-  }
 
   /* Header part End  */
 
 
   /* Footer part............................................................. */
-  
-  .newletter-container {
-    display: inline !important;    
-  }
 
 
   /* Footer part ends */
 
+  /* Home part */
+
+  /* Home part end */
 
 
 }
@@ -101,43 +57,15 @@
 /* Móviles en horizontal o tablets en vertical */
 
 @media (max-width: 768px) {
+  
+  /* Footer part............................................................. */
 
-  .header-upper-links-container .links-div:hover{
-    background-color: var(--color-secundary);
-    padding: 40px 50px;
-  }
 
-  .input-div{
-    width: 50% !important;
-   }
-
-   header{
-    padding-left: 20%;
-
-  }
-
-  .link-logo {
-    margin-right: 450px;
-  }
-
+  /* Footer part ends */
 
  }
 
 
  /* Móviles en vertical */
  @media (max-width: 480px) { 
-
-  .button-toggle{
-    margin-left: 0%;
-  }
-
-  .link-logo {
-    margin-right: 300px;
-  }
-
-
-  .button-toggle{
-    margin-left: 8%;
-  }
-
   }
