--- a/src/Resposive.css
+++ b/src/Resposive.css
@@ -1,14 +1,11 @@
 :root {
   --color-main: #021e43;
-  --color-3b4149: #3b4149;
   --color-hover: #b8cee3;
   --color-secundary: #00377a;
-  --color-bf4800: #bf4800;
-  --color-f5f5f7: #f5f5f7;
-  --color-ededed: #ededed;
-  --color-777777: #777777;
-  --color-1c1c1b: #1c1c1b;
+  --color-brands: #bf4800;
+  --color-Grimmy: #777777;
 }
+
 
 /* Tablets en horizonal y escritorios normales */
 @media (max-width: 1399px) {
@@ -35,24 +32,21 @@
   .logo-toggle {
     margin-left: 110px;
   }
+  .category{
+    display: none;
+  } 
 
-  /* Header part End  */
+  .contentWidth {
+    width: 100%;
+  }
 
-  /* Footer part............................................................. */
 
-  /* Footer part ends */
-
-  /* Home part */
-
-  /* Home part end */
 }
 
 /* Móviles en horizontal o tablets en vertical */
 
-@media (max-width: 768px) {
-  /* Footer part............................................................. */
-
-  /* Footer part ends */
+@media (max-width: 800px) {
+ 
 }
 
 /* Móviles en vertical */
