File structure changes

--- a/src/App.css
+++ b/src/App.css
@@ -328,7 +328,7 @@ footer .input-group-text {
 
 /* famous card................................................................................................................. */
 
-.famous-card .famous-content {
+/* .famous-card .famous-content {
   top: 10%;
   left: 5%;
 }
@@ -354,7 +354,7 @@ footer .input-group-text {
   line-height: 24px;
   font-weight: 100;
   color: white;
-}
+} */
 /* famous card ends */
 
 /* Our Store............................................................................................................................ */
