Footer and Bog Card components fix design

--- a/src/components/styles/Categories.css
+++ b/src/components/styles/Categories.css
@@ -28,7 +28,7 @@
     padding: 0 50px;
   }
   .category .box:hover {
-    background-color: #9ca9f5;
+    background-color: #00377a20;
     cursor: pointer;
   }
 
