--- a/src/App.css
+++ b/src/App.css
@@ -170,18 +170,18 @@ header .nav-link{
 
 /* Footer Part.......................................................................................................... */
 
-footer {
-  background-color: var(--color-secundary);
+.footer-container {
+  background-color: var(--color-main);
 }
 
-footer:not(:first-child) {
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-}
-footer .input-group-text {
-  background-color: var(--color-secundary);
+.link-footer{
   color: white;
-  padding: 8px 17px;
 }
+
+.link-footer:hover{
+  color: white;
+}
+
 
 /* Footer Part Ends Here */
 
@@ -225,7 +225,7 @@ footer .input-group-text {
 /* Special Products End */
 
 .Blog-card-items{
-  margin: 20px;
+  margin: 5px;
 }
 
 /* Home Page Ends */
@@ -237,6 +237,17 @@ footer .input-group-text {
 
   border-radius: 10px;
 }
+
+.blog-btn{
+  border: 1px solid #021e43 !important;
+  color: #021e43 !important;
+}
+
+.blog-btn:hover{
+  background-color: #021e43 !important;
+  color: white !important;
+}
+
 .blog-card img {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
