--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   font-weight: 500;
   margin-bottom: 30px;
 }
+
 .card-wrapper {
   background-color: white;
   box-shadow: 0 0 10px #0000001a;
@@ -50,22 +51,26 @@ a {
   gap: 30px;
 }
 
-.button {
-  background-color: var(--color-secundary);
-  color: white;
-  font-size: 14px;
-  padding: 13px 33px;
-  border-radius: 25px;
-}
-.button:hover {
-  background-color: var(--color-hover);
-  color: #131921;
-}
-
-
 .text-color-white{
   color: white !important;
 }
+
+.error{
+  color: red;
+}
+
+.Primary-btn{
+  border: 2px solid #021e43 !important;
+  color: #021e43 !important;
+}
+
+.Primary-btn:hover{
+  background-color: #021e43 !important;
+  color: white !important;
+}
+
+
+
 
 /* Header Part.............................................................................................................................. */
 
@@ -228,25 +233,22 @@ header .nav-link{
   margin: 5px;
 }
 
+.container-wrapper-famous{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  gap: 30px;
+  padding: 18px;
+}
+
 /* Home Page Ends */
 
 /* BLog Part........................................................................................................................ */
 
 .blog-card {
   background-color: white;
-
   border-radius: 10px;
 }
 
-.blog-btn{
-  border: 1px solid #021e43 !important;
-  color: #021e43 !important;
-}
-
-.blog-btn:hover{
-  background-color: #021e43 !important;
-  color: white !important;
-}
 
 .blog-card img {
   border-top-left-radius: 10px;
@@ -519,43 +521,47 @@ header .nav-link{
 /*  auth card................................................................................................................. */
 
 .auth-card {
-  padding: 20px;
+  padding: 20px 80px 60px 80px;
   background-color: white;
-  width: 500px;
+  max-width: 500px;
   margin: 30px auto;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
+
 .auth-card h3 {
-  font-size: 19px;
+  font-size: 20px;
   font-weight: 500;
   color: var(--color-Grimmy);
 }
-.auth-card p {
-  font-size: 13px;
-  color: var(--color-Grimmy);
-}
-.auth-card .form-control {
-  height: 50px;
-  background-color: var(--color-wrapper);
-  color: var(--color-Grimmy);
-  font-size: 14px;
-  border-radius: 10px;
-  border-color: transparent;
-}
+
 .auth-card a {
   font-size: 14px;
   font-weight: 400;
-  color: var(--color-1c1c1b);
-}
-.signup {
-  background-color: var(--color-hover);
   color: var(--color-main);
-  border: none;
 }
-.signup:hover {
-  background-color: var(--color-main);
-  color: white;
+
+.signup-btn{
+  background-color: #021e43 !important;
+  color: white !important;
+  font-size: 16px !important;
 }
+
+.signup-btn:hover{
+  border: 2px solid #021e43 !important;
+  color: #021e43 !important;
+  background-color: white !important;
+}
+
+.btn-Forgot-pass{
+  color: #00377a;
+}
+
+.btn-Forgot-pass:hover{
+  color: #bf4800;
+  cursor: pointer;
+}
+
 /*  auth card  ends*/
 
 /* Policy Pages.......................................................................... */
