--- a/src/components/styles/FamousWrapper.css
+++ b/src/components/styles/FamousWrapper.css
@@ -1,10 +1,9 @@
 
 .famous-wrapper{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-  gap: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /* .flip-card-container */
 .flip-card-container {
