Fixes to the wishlist design and adaptation

--- a/src/App.css
+++ b/src/App.css
@@ -70,8 +70,6 @@ a {
 }
 
 
-
-
 /* Header Part.............................................................................................................................. */
 
 
@@ -450,6 +448,7 @@ header .nav-link{
 /* Our store ends here */
 
 /* Contact Page...................................................................................................... */
+
 .contact-inner-wrapper {
   padding: 30px 20px;
   border-radius: 15px;
@@ -483,11 +482,32 @@ header .nav-link{
 
 /* Compare Product Page .....................................................................................................*/
 
+.wishlist-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr ); /* 4 products per column */
+  grid-gap: 20px;
+}
+
+.wishlist {
+  display: flex;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+}
+
+.wishlist-card {
+  margin: auto;
+}
+
+.img-wish {
+  object-fit: contain;
+}
+
 .compare-product-card {
   padding: 20px 15px;
   background-color: white;
   border-radius: 10px;
 }
+
 .compare-product-card .cross,
 .wishlist-card .cross {
   top: 15px;
@@ -496,6 +516,7 @@ header .nav-link{
   padding: 3px;
   cursor: pointer;
 }
+
 .compare-product-details h5.title,
 .wishlist-card h5.title {
   font-size: 15px;
@@ -503,12 +524,14 @@ header .nav-link{
   font-weight: 500;
   color: var(--color-1c1c1b);
 }
+
 .compare-product-details h6.price,
 .wishlist-card h6.price {
   font-size: 15px;
   line-height: 22px;
   font-weight: 400;
 }
+
 .compare-product-card .product-detail {
   display: flex;
   justify-content: space-between;
@@ -516,6 +539,7 @@ header .nav-link{
   padding: 10px 0px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 /* Compare Product Page end here */
 
 /*  auth card................................................................................................................. */
