--- a/src/App.css
+++ b/src/App.css
@@ -755,3 +755,19 @@ header .nav-link{
 }
 /* Shipping page ends here */
 
+.blog-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.blog-card .card{
+  width: 20rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.blog-card .img-blog{
+  text-align: center;
+  height: 318px;
+  object-fit: cover;
+}
