--- a/src/Resposive.css
+++ b/src/Resposive.css
@@ -44,18 +44,22 @@
     display: inline-block; 
   }
   .wishlist-container {
-    grid-template-columns: repeat(3, 1fr); /* 1 product per column */
+    grid-template-columns: repeat(3, 1fr); 
   }
   
-
+  .blog-card .card{
+    width: 29vh;
+  }
 }
 
 /* Móviles en horizontal o tablets en vertical */
 
-@media (max-width: 800px) {
+@media (max-width: 950px) {
   .wishlist-container {
-    grid-template-columns: repeat(2, 1fr); /* 1 product per column */
+    grid-template-columns: repeat(2, 1fr); 
   }
+
+
 }
 
 /* Móviles en vertical */
@@ -64,6 +68,6 @@
     margin-left: 10px;
   }
   .wishlist-container {
-    grid-template-columns: repeat(1, 1fr); /* 1 product per column */
+    grid-template-columns: repeat(1, 1fr); 
   }
 }
