--- a/src/App.css
+++ b/src/App.css
@@ -755,19 +755,28 @@ header .nav-link{
 }
 /* Shipping page ends here */
 
+
 .blog-container{
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 15px;
 }
 
-.blog-card .card{
-  width: 20rem;
-  display: flex;
-  flex-wrap: wrap;
+.img-blog-card{
+  height: 300px !important;
 }
 
-.blog-card .img-blog{
-  text-align: center;
-  height: 318px;
-  object-fit: cover;
+@media (max-width: 950px) {
+  
+  .blog-container{
+    grid-template-columns: repeat(2, 1fr); 
+  }
 }
+
+@media (max-width: 550px) {
+  
+  .blog-container{
+    grid-template-columns: repeat(1, 1fr); 
+  }
+}
+
