--- a/src/Resposive.css
+++ b/src/Resposive.css
@@ -67,4 +67,17 @@
   .wishlist-container {
     grid-template-columns: repeat(1, 1fr); 
   }
+
+.contact-inner-wrapper{
+  display: inline-block;
+}
+
+.contact-inner-wrapper > div {
+  width: 100%;
+}
+
+.contact-info{
+  margin-top: 40px;
+}
+
 }
