--- a/src/App.css
+++ b/src/App.css
@@ -671,6 +671,7 @@ header .nav-link{
   width: 48%;
   border: 1px solid rgba(0, 0, 0, 0.25);
 }
+
 .main-product-image .js-image-zoom__zoomed-image {
   left: 50px !important;
   padding: 10px;
@@ -786,4 +787,6 @@ header .nav-link{
     grid-template-columns: repeat(1, 1fr); 
   }
 }
+
+/* ...................................................................... */
 
