--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,9 @@ header .nav-link {
   color: white;
 }
 
+.size-60{
+  width: 70px;
+}
 /* Footer Part Ends Here */
 
 /* Home Page....................................................................................................... */
