--- a/src/pages/orders/styles/Orders.css
+++ b/src/pages/orders/styles/Orders.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #00377a;
+    /* background-color: #00377a; */
 
 }
  
@@ -21,25 +21,31 @@
 
 .table-header{
     width: 100%;
-    height: 10%;
+    height: 8%;
     background-color: #fff4;
     padding: .8rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black
 }
 
+
 .table-body{
-    width: 95%;
-    max-width: calc(89% - .8rem);
+    width: 99%;
+    height: 89%; 
+    max-width: calc(95% - .8rem);
     background-color: #fffb;
     margin: .8rem auto;
-    border-radius: .6rem;
+    /* border-radius: .6rem; */
 
     overflow: auto;
 }
 
 
 .table-body::-webkit-scrollbar{
-    width: 0.5rem;
-    height: 0.5rem;
+    width: 0.9rem;
+    height: 0.9rem;
 }
 
 .table-body::-webkit-scrollbar-thumb{
@@ -54,6 +60,7 @@
 
 table{
     width: 100%;
+    min-width: 1000px;
 }
 
 td img {
@@ -74,7 +81,9 @@ thead th{
     position: sticky;
     top: 0;
     left: 0;
-    background-color: #d5d1defe;
+    /* background-color: #d5d1defe; */
+    background-color: #00377a;
+    color: white;
 }
 
 tbody tr:nth-child(even){
@@ -84,3 +93,13 @@ tbody tr:nth-child(even){
 tbody tr:hover{
     background-color: #fff6;
 }
+
+.text-bold{
+    font-weight: bold;
+}
+
+/* tbody{
+    background-color: #021e43de;
+    color: white;
+}
+ */
