--- a/src/components/SpecialProduct/SpecialProduct.css
+++ b/src/components/SpecialProduct/SpecialProduct.css
@@ -7,6 +7,8 @@
     width: 100%;
     display: flex;
     align-items: center;
+    padding: 2rem;
+    background-color: #fff;
 }
 
 .special-product-content{
@@ -15,6 +17,8 @@
 
 .img-card{
     width: 300px;
+    height: 300px;
+    object-fit: contain;
 }
 
 .button-special-product{
@@ -33,6 +37,10 @@
 
 .progress-bar{
     background-color: #021e43 !important;
+}
+
+.font-size{
+    font-size: .7rem;
 }
 
 
