--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,51 +1,5 @@
-.product-card {
-    padding: 15px;
-    background-color: white;
-    border-radius: 10px;
-    overflow: hidden;
-    width: 100%;
-  }
-  .product-card .product-image {
-    height: 270px;
-  }
-  .product-card .product-image img {
-    object-fit: contain;
-  }
-  .product-card .product-image > img:last-child {
-    display: none;
-  }
-  .product-card:hover .product-image > img:nth-child(1) {
-    display: none;
-  }
-  .product-card:hover .product-image > img:last-child {
-    display: block;
-  }
-  .product-card:hover .action-bar {
-    right: 15px;
-  }
-  .product-card .product-details h6 {
-    color: var(--color-brands);
-    font-size: 13px;
-  }
-  .product-card .product-details h5 {
-    font-size: 15px;
-    color: var(--color-1c1c1b);
-  }
-  .product-card .product-details p.price {
-    font-size: 16px;
-    color: var(--color-1c1c1b);
-  }
-  .product-card p.description {
-    font-size: 13px;
-    color: var(--color-Grimmy);
-    margin-right: 20px;
-  }
-  .action-bar {
-    top: 10%;
-    right: -23px;
-    transition: 0.3s;
-  }
-  .wishlist-icon {
-    top: 2%;
-    right: 15px;
-  }
+.container-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 10px;
+}
