--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ a {
 
 .special-Product {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 20px;
 }
 
@@ -216,6 +216,7 @@ a {
 
 .img-blog-card {
   height: 300px !important;
+  object-fit: cover;
 }
 
 
@@ -228,17 +229,6 @@ a {
   background-color: var(--color-secundary);
 }
 
-@media (max-width: 950px) {
-  .blog-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 550px) {
-  .blog-container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
 
 
 /* ...................................................................... */
