--- a/src/components/common/Styles/Header.css
+++ b/src/components/common/Styles/Header.css
@@ -87,3 +87,22 @@
     transform: translate3d(0px, 57px, 0px) !important;
     background-color: var(--color-main);
   }
+
+  .pruebas{
+    width: 3rem;
+  }
+
+  @media (max-width: 1399px) {
+  
+    .nav-links {
+      width: 100% !important;
+      height: 80px;
+      margin: 5px;
+      border-radius: 10px;
+      padding: 10px !important;
+    }
+  
+    .nav-links:focus {
+      background-color: rgba(255, 255, 255, 0.06) !important;
+    }
+  }
