--- a/src/pages/auth/Styles/auth.css
+++ b/src/pages/auth/Styles/auth.css
@@ -8,9 +8,6 @@
       rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
       rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   }
-  
-  .link{
-  }
 
   .link:hover{
     color: var(--color-main);
@@ -29,3 +26,30 @@
     color: var(--color-main);
   }
   
+  .circule{
+    border-radius: 50%;
+    background: #021e43;
+    height: 150px;
+    width: 150px;
+    margin: .2rem .8rem 0rem .8rem; 
+  }
+
+  .figure{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .circule-01{
+    border-radius: 50%;
+    background: #021e43;
+    height: 70px;
+    width: 70px;
+    margin: .2rem 11rem;
+  }
+
+  .figure-part{
+    height: 100px;
+    width: 100px;
+
+  }
